<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>

    <string name="enter_artist">Enter Artist Name</string>
    <string name="title_activity_tracks">Top 10 Tracks</string>

    <string name="artist_not_found">not found.  Try a different artist.</string>
    <string name="tracks_not_found">No tracks found</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_notification_key" translatable="false">notification_switch</string>
    <string name="pref_notification_summary">Turn on showing notification controls on the drawer and lock screen</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_default" translatable="false">true</string>
    <string name="pref_country_key" translatable="false">country_code</string>
    <string name="pref_country_title">Country Code</string>
    <string name="pref_country_default" translatable="false">US</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="action_share">Share</string>

</resources>
