<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="@string/pref_notification_default"
        android:key="@string/pref_notification_key"
        android:summary="@string/pref_notification_summary"
        android:title="@string/pref_notification_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_country_default"
        android:inputType="textCapCharacters"
        android:key="@string/pref_country_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_country_title" />
</PreferenceScreen>
